Revision history for libeio

TODO: maybe add mincore support? available on at leats darwin, solaris, linux, freebsd

1.0
        - readdir: correctly handle malloc failures.
        - readdir: new flags argument, can return inode
          and possibly filetype, can sort in various ways.
        - readdir: stop immediately when cancelled, do
          not continue reading the directory.
        - fix return value of eio_sendfile_sync.
        - include sys/mman.h for msync.
	- added EIO_STACKSIZE.
	- added msync, mtouch support (untested).
        - added sync_file_range (untested).
        - fixed custom support.
        - use a more robust feed-add detection method.
	- "outbundled" from IO::AIO.
        - eio_set_max_polltime did not properly convert time to ticks.
