@@ -17,4 +17,5 @@ TODO: maybe add mincore support? available on at leats darwin, solaris, linux, f
         - use a more robust feed-add detection method.
 	- "outbundled" from IO::AIO.
         - eio_set_max_polltime did not properly convert time to ticks.
+        - tentatively support darwin in sendfile.
 
